--- a/introToBoxModel.html
+++ b/introToBoxModel.html
@@ -6,9 +6,99 @@
 <link rel="stylesheet" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
 <style>
-
-
-
+#width1 {
+  width:75%;
+}
+#width2 {
+  width: 100px;
+}
+#width3 {
+  width: 3em;
+}
+#Container1 {
+  width: 50%;
+}
+#inside1 {
+  width: 50%;
+}
+#Container2 {
+  width: 300px;
+}
+#inside2 {
+  width: 75%;
+}
+#Container3 {
+  width: 200px;
+}
+#inside3 {
+  width: 300px;
+}
+#border1 {
+  border: 1px solid black;
+}
+#border2 {
+  border: 2px solid red;
+}
+#border3 {
+  border: 3px dashed grey;
+}
+#border4 {
+  border:1px solid black;
+  width: 50%;
+  background: maroon;
+}
+#margin1 {
+  border: 1px solid black;
+  margin: 10%;
+}
+#margin2 {
+  border: 1px solid black;
+  margin: 10%;
+}
+#margin3 {
+  margin:2px 25%;
+}
+#margin4 {
+  background-color: maroon;
+  margin:0 15%;
+}
+#padding1 {
+  border: 1px solid black;
+  padding:10%;
+  margin:0 10%;
+}
+#padding2 {
+  border: 1px solid black;
+  padding: 5px 1em;
+  margin:0 10%;
+}
+#padding3 {
+  padding: 3em 2em;
+}
+#padding4 {
+  background-color: maroon;
+  padding:0 15%;
+}
+#singleSide1 {
+  border-bottom: 1px solid grey;
+}
+#singleSide2 {
+  margin: 10% 0;
+  border-top: 1px dashed black;
+  padding-top: 1em;
+}
+#singleSide3 {
+  width: 50%;
+  margin: 10% 0;
+  border-right: 2px solid red;
+}
+#singleSide4 {
+  background-color: maroon;
+  margin: 0 5%;
+  padding-left: 3em;
+  padding-top: 3em;
+  padding-bottom: 3em;
+}
 </style>
 </head>
 <body>
